--- a/L05.ipynb
+++ b/L05.ipynb
@@ -383,6 +383,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "------\n",
+    "$$\n",
+    "Y=X\\beta+\\epsilon, \\qquad \\hat Y = X \\hat\\beta, \\qquad \\hat\\beta = \\left(\\left(X^T X\\right)^{-1}X^{T}\\right)Y=AY\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "V(Y) = V(\\epsilon)=\\sigma^2, \\qquad V(\\beta) = A (\\sigma^2) A^T = \\left(X^T X\\right)^{-1} \\sigma^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "T=\\frac{\\hat f-f_0}{\\sqrt{V(f)}} \\sim t_{n-(k+1)}\n",
+    "$$\n",
+    "\n",
+    "Standard Error of Estimation:\n",
+    "$$\n",
+    "\\widehat{\\sigma^2} = S^2 = MSE = \\frac{SSE}{n-(k+1)}, \\qquad SSE=\\sum (y_i-\\hat y_i)^2=Y^T(Y-X\\hat{\\beta})\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "S_{xx} = \\sum(x_i-\\bar x)^2, \\quad S_{xy} = \\sum(x_i-\\bar x)(y_i-\\bar y), \\quad S_{yy} = \\sum(y_i-\\bar y)^2 = SST\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "SSR = \\sum(\\hat y_i - \\bar y)^2, \\qquad \n",
+    "SSR+SSE = SST, \\qquad r^2 = \\frac{SSR}{SST} \n",
+    "$$\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{pmatrix}\n",
+    "a & b \\\\\n",
+    "c & d\n",
+    "\\end{pmatrix}, \\qquad A^{-1} = \\frac{1}{ad-bc} \\begin{pmatrix} d & -b \\\\ -c & a\\end{pmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([59.85301691, -2.46142021])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scipy.stats as st\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "input_file = \"./data_sets/DKD2e_data_sets/cereals.CSV\"\n",
+    "\n",
+    "df = pd.read_csv(input_file)\n",
+    "df = df[['Sugars','Rating']]\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "X = df['Sugars'].to_numpy() # independent variable\n",
+    "Y = df['Rating'].to_numpy() # dependent variable\n",
+    "\n",
+    "n = X.shape[0]\n",
+    "X = np.hstack((np.ones(n)[:,None],X[:,None]))\n",
+    "\n",
+    "beta = np.linalg.inv(X.T @ X)@X.T@Y\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5.7 HYPOTHESIS TESTING IN REGRESSION"
    ]
   },
