--- a/L02.ipynb
+++ b/L02.ipynb
@@ -1211,6 +1211,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EXERCISES**\n",
+    "12, 13, 14, 15, 16, 17, 18, 21, 24, 25, 26, 28, 29\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
