--- a/L04.ipynb
+++ b/L04.ipynb
@@ -409,6 +409,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**EXERCISES**\n",
+    "6, 7, 11, 17, 18, 20, 21, 23, 26"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-------------------\n",
     "## Python Zone"
    ]
