--- a/L05.ipynb
+++ b/L05.ipynb
@@ -624,6 +624,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**EXERCISES**\n",
+    "2, 4, 5, 10"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "--------------------\n",
     "## Python Zone"
    ]
