--- a/L03.ipynb
+++ b/L03.ipynb
@@ -579,6 +579,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EXERCISES**\n",
+    "16, 17"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
